--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -48,7 +48,7 @@
                    popover-popup-delay="500"
                    popover-placement="right"
                    popover-trigger="mouseenter"
-                   popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä">Kiintiö on tarkka</label>
+                   popover="Hakijaryhmästä hyväksytään enintään kiintiön mukainen määrä">Kiintiö on yläraja</label>
 
             <div class="col-md-2 ">
                 <div class="checkbox">
@@ -58,7 +58,7 @@
                            popover-popup-delay="500"
                            popover-placement="right"
                            popover-trigger="mouseenter"
-                           popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä"
+                           popover="Hakijaryhmästä hyväksytään enintään kiintiön mukainen määrä"
                             />
                 </div>
             </div>
@@ -70,7 +70,7 @@
                    popover-popup-delay="500"
                    popover-placement="right"
                    popover-trigger="mouseenter"
-                   popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt">Käytä kaikki hyväksytyt</label>
+                   popover="Vain hakijaryhmään kuuluvat voivat tulla hyväksytyiksi">Vain hakijaryhmään kuuluvat voivat tulla hyväksytyiksi</label>
 
             <div class="col-md-2 ">
                 <div class="checkbox" >
@@ -80,7 +80,7 @@
                            popover-popup-delay="500"
                            popover-placement="right"
                            popover-trigger="mouseenter"
-                           popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt"
+                           popover="Vain hakijaryhmään kuuluvat voivat tulla hyväksytyiksi"
                             />
                 </div>
             </div>
