--- a/src/main/webapp/app/hakukohde/hakukohdelomake.html
+++ b/src/main/webapp/app/hakukohde/hakukohdelomake.html
@@ -204,6 +204,20 @@
 
         <div class="form-group" ng-if="model.hakukohde.oid">
             <div class="col-md-offset-2 col-md-10">
+                <div ng-controller="HakijaryhmaValintaController" class="modal-controller-div">
+                    <modal modal-template="hakijaryhma/hakijaryhmaModal.html">
+                        <modal-open></modal-open>
+                    </modal>
+                    <button auth="update" class="btn btn-sm btn-primary" type="button" ng-click="openHakijaryhmaModal()"><i
+                            class="fa fa-plus"></i>
+                        Liitä hakijaryhmä
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group" ng-if="model.hakukohde.oid">
+            <div class="col-md-offset-2 col-md-10">
                     <span auth="crud" class="btn btn-sm btn-default" ng-click="lisaaHakijaryhma()"><i
                             class="fa fa-plus"></i> Hakijaryhma</span>
             </div>
