--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -32,6 +32,7 @@
 
     <div class="form-row-content width-60">
         <input class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/>
+        <br><span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
     </div>
     <div class="clear"></div>
 </div>
