--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -47,6 +47,17 @@
 </div>
 
 <div class="form-row">
+    <label class="form-row-label" for="">{{ t('valintaryhmalomake.haku') || 'Haku' }}</label>
+
+    <div class="form-row-content width-60">
+        <select ng-model="model.valintaryhma.hakuoid" ng-options="h.oid as h.nimi.kieli_fi for h in model.haut | orderBy:'nimi.kieli_fi'">
+            <option value=""></option>
+        </select>
+    </div>
+    <div class="clear"></div>
+</div>
+
+<div class="form-row">
     <label class="form-row-label" for="">{{ t('valintaryhmalomake.kohdejoukko') || 'Kohdejoukko' }}</label>
 
     <div class="form-row-content width-60">
