--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -61,7 +61,7 @@
     <label class="form-row-label" for="">{{ t('valintaryhmalomake.kohdejoukko') || 'Kohdejoukko' }}</label>
 
     <div class="form-row-content width-60">
-        <select ng-model="model.valintaryhma.kohdejoukko"
+        <select ng-disabled="model.valintaryhma.level > 1" ng-model="model.valintaryhma.kohdejoukko"
                 ng-options="k.koodiUri as k.metadata[0].nimi for k in model.kohdejoukot">
         </select>
     </div>
