--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
@@ -34,7 +34,7 @@
             <label class="form-row-label" for="">{{ t('valintaryhmalomakeuusi.kohdejoukko') || 'Kohdejoukko' }}</label>
 
             <div class="form-row-content width-60">
-                <select ng-model="model.valintaryhma.kohdejoukko"
+                <select ng-disabled="model.parentOid" ng-model="model.valintaryhma.kohdejoukko"
                         ng-options="k.koodiUri as k.metadata[0].nimi for k in model.kohdejoukot">
                 </select>
             </div>
