--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -1,3 +1,16 @@
+<script type="text/ng-template" id="poistajononmuodostumiskriteeri.html">
+    <div class="modal-header">
+        <h3 class="modal-title">{{ t('valintatapajono.poistajononmuodostumiskriteeri.header') || 'Oletko varma?' }}</h3>
+    </div>
+    <div class="modal-body">
+        {{ t('valintatapajono.poistajononmuodostumiskriteeri.body') || 'Oletko varma, että halua poistaa jonon muodostumiskriteerin?' }}
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">{{ t('valintatapajono.poistajononmuodostumiskriteeri.kylla') || 'Kyllä' }}</button>
+        <button class="btn btn-warning" ng-click="cancel()">{{ t('valintatapajono.poistajononmuodostumiskriteeri.ei') || 'Ei' }}</button>
+    </div>
+</script>
+
 <h1>{{ t('valintatapajono.header') || 'Jonon muokkaus' }}</h1>
 
 <div class="tabs">
