--- a/src/main/webapp/app/jarjestyskriteeri/jarjestyskriteeri.html
+++ b/src/main/webapp/app/jarjestyskriteeri/jarjestyskriteeri.html
@@ -25,12 +25,12 @@
 
                 <label class="col-sm-2 control-label">{{ t('jarjestyskriteeri.laskentakaavanvalinta') || 'Laskentakaavan valinta' }}</label>
 
-                <div class="clear"></div>
-                <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat">
-                    <label class="col-sm-2 control-label">{{group.name}}<br/></label>
+                <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat ">
+                    <div class="clear"></div>
+                    <label class="col-sm-2 control-label" ng-if="kaavasFiltered(group.result)">{{group.name}}<br/></label>
 
-                    <div class="col-sm-10">
-                        <div ng-repeat="data in group.result">
+                    <div class="col-sm-10" ng-if="kaavasFiltered(group.result)">
+                        <div ng-repeat="data in group.result | laskentakaavaFilter">
                             <p class="form-control-static">
                                 <input type="radio" name="laskentakaava" value="{{data.id}}"
                                        ng-model="model.jarjestyskriteeri.laskentakaavaId"
