--- a/src/main/webapp/app/jarjestyskriteeri/jarjestyskriteeri.html
+++ b/src/main/webapp/app/jarjestyskriteeri/jarjestyskriteeri.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <div class="form-group" ng-model="model.laskentakaavaModel.laskentakaavat">
+            <div ng-if="!model.jarjestyskriteeri.oid" class="form-group" ng-model="model.laskentakaavaModel.laskentakaavat">
 
                 <label class="col-sm-2 control-label">{{ t('jarjestyskriteeri.laskentakaavanvalinta') || 'Laskentakaavan valinta' }}</label>
 
@@ -59,6 +59,46 @@
 
                 </div>
             </div>
+
+            <div ng-if="model.jarjestyskriteeri.oid" class="form-group" ng-model="model.laskentakaavaModel.laskentakaavat">
+
+                <label class="col-sm-2 control-label">{{ t('jarjestyskriteeri.laskentakaavanvalinta') || 'Laskentakaavan valinta' }}</label>
+
+                <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat ">
+                    <div class="clear"></div>
+                    <label class="col-sm-2 control-label">{{group.name}}<br/></label>
+
+                    <div class="col-sm-10">
+                        <div ng-repeat="data in group.result">
+                            <p class="form-control-static">
+                                <input type="radio" name="laskentakaava" value="{{data.id}}"
+                                       ng-model="model.jarjestyskriteeri.laskentakaavaId"
+                                       ng-required="!model.jarjestyskriteeri.laskentakaavaId"/>
+
+                                <span ng-bind="data.nimi"></span>(<span ng-bind="data.id"></span>)
+
+                                <a popover-popup-delay="500"
+                                   popover-placement="right"
+                                   popover-trigger="mouseenter"
+                                   popover="{{ t('jarjestyskriteeri.kaavaavataan') || 'Kaava avataan uuteen välilehteen' }}"
+                                   ng-if="group.valintaryhmaOid"
+                                   target="_blank"
+                                   ng-href="#/valintaryhma/{{group.valintaryhmaOid}}/laskentakaavalista/laskentakaava/{{data.id}}">{{ t('jarjestyskriteeri.naytakaava') || 'Näytä kaava' }}</a>
+                                <a popover-popup-delay="500"
+                                   popover-placement="right"
+                                   popover-trigger="mouseenter"
+                                   popover="{{ t('jarjestyskriteeri.kaavaavataan') || 'Kaava avataan uuteen välilehteen' }}"
+                                   ng-if="group.hakukohdeOid"
+                                   target="_blank"
+                                   ng-href="#/hakukohde/{{group.hakukohdeOid}}/laskentakaavalista/laskentakaava/{{data.id}}">{{ t('jarjestyskriteeri.naytakaava') || 'Näytä kaava' }}</a>
+                            </p>
+                        </div>
+                        <br/>
+                    </div>
+
+                </div>
+            </div>
+
             <div class="form-group">
                 <div class="col-sm-2">
                         <button class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}"><i class="fa fa-arrow-left"></i> {{ t('common.takaisin') || 'Takaisin' }}
