--- a/src/main/webapp/app/jarjestyskriteeri/jarjestyskriteeri.html
+++ b/src/main/webapp/app/jarjestyskriteeri/jarjestyskriteeri.html
@@ -21,6 +21,8 @@
                 </div>
             </div>
 
+
+            <!-- Uuden järjestyskriteerin lisääminen -->
             <div ng-if="!model.jarjestyskriteeri.oid" class="form-group" ng-model="model.laskentakaavaModel.laskentakaavat">
 
                 <label class="col-sm-2 control-label">{{ t('jarjestyskriteeri.laskentakaavanvalinta') || 'Laskentakaavan valinta' }}</label>
@@ -60,6 +62,8 @@
                 </div>
             </div>
 
+
+            <!-- Järjestyskriteerin muokkaus / tarkastelu (ei filttereitä laskentakaavalistassa) -->
             <div ng-if="model.jarjestyskriteeri.oid" class="form-group" ng-model="model.laskentakaavaModel.laskentakaavat">
 
                 <label class="col-sm-2 control-label">{{ t('jarjestyskriteeri.laskentakaavanvalinta') || 'Laskentakaavan valinta' }}</label>
