--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -71,6 +71,14 @@
                             ng-options="arvo.avain as arvo.arvo for arvo in valintaperusteviite.arvojoukko | orderBy:'arvo'"></select>
                 </div>
             </div>
+            <div class="form-group" ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'">
+                <label class="col-sm-3 control-label">{{ t('laskentakaavaviiteasetuksetmodal.vaatiiOsallistumisen') || 'Vaatii osallistumisen' }}</label>
+                <div class="col-sm-9">
+                    <input ng-disabled="alikaavaValues.isAlikaava" type="checkbox" ng-model="valintaperuste.vaatiiOsallistumisen"
+                           required="required" />
+
+                </div>
+            </div>
 
             <div id="valintaperusteviite-kuvaukset">
                 <div><b>{{ t('laskentakaavaviiteasetuksetmodal.hylkays') || 'Hylkäysperustekuvaukset' }}</b></div>
