--- a/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
+++ b/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
@@ -37,9 +37,9 @@
 
     <div class="search">
         <div class="margin-top-1">
-            <a auth="crud" href="#/valintaryhma/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{'valintaryhmalistaus.add.valintaryhma' | translate}}</a>
-            <a auth="crud" href="#/hakukohde/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{'valintaryhmalistaus.add.hakukohde' | translate}}</a>
-            <a class="btn btn-sm btn-default" ng-click="domain.expandTree()"> <i class="fa fa-expand"></i> {{ t('valintaryhmatlistaus.avaapuu') || 'Avaa puu' }}</a>
+            <a auth="crud" href="#/valintaryhma/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{t('valintaryhmalistaus.add.valintaryhma') || 'Valintaryhma' }}</a>
+            <a auth="crud" href="#/hakukohde/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{ t('valintaryhmalistaus.add.hakukohde') || 'Hakukohde' }}</a>
+            <a class="btn btn-sm btn-default" ng-click="domain.expandTree()"> <i class="fa fa-expand"></i> {{ t('valintaryhmatlistaus.ravaapuu') || 'Avaa puu' }}</a>
         </div>
 
         <br />
