--- a/src/main/webapp/app/laskentakaavat/listaus/kaavakopiointiModal.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/kaavakopiointiModal.html
@@ -3,18 +3,16 @@
 </div>
 <div class="modal-body">
     <form class="form-horizontal" name="kaavakopio">
-
         <div class="form-group">
-            <label class="col-sm-4 control-label" for="nimi">Kopioitavan kaavan nimi</label>
+            <label class="col-sm-4 control-label" for="uusinimi">Kopioitavan kaavan nimi</label>
 
             <div class="col-sm-8">
-                <input ng-required="!nimi" type="text" name="nimi" id="nimi" class="form-control" ng-model="nimi"/>
+                <input ng-required="!nimi" type="text" class="form-control" ng-model="model.uusinimi"/>
             </div>
         </div>
         <div class="form-group">
             <div ng-include="'../common/partials/valintaryhmaSelector.html'"/>
         </div>
-        {{model}}
     </form>
 </div>
 <div class="modal-footer">
