--- a/src/main/webapp/app/laskentakaavat/listaus/kaavakopiointiModal.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/kaavakopiointiModal.html
@@ -7,7 +7,7 @@
             <label class="col-sm-4 control-label" for="uusinimi">Kopioitavan kaavan nimi</label>
 
             <div class="col-sm-8">
-                <input ng-required="!nimi" type="text" class="form-control" ng-model="model.uusinimi"/>
+                <input ng-required="!nimi" type="text" id="uusinimi" class="form-control" ng-model="model.uusinimi"/>
             </div>
         </div>
         <div class="form-group">
